--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>travel-beacon-app</title>
+    <title>iguide</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <meta property="og:title" content="travel-beacon-app" />
+    <meta property="og:title" content="iguide" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
@@ -17,10 +17,7 @@
     <meta name="twitter:image" content="" />
   </head>
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
+  <body>    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
